# lora_device_lib_fork

extension/: CMakeLists.txt  build.sh  build_ttn-otaa.sh
extension/cmake/: binutils-arm-none-eabi.cmake  gdb-helper.cmake  stm32l1.cmake  toolchain-arm-none-eabi.cmake
extension/src/: CMakeLists.txt
extension/src/apps/ttn-otaa/: CMakeLists.txt
extension/src/apps/ttn-otaa/heltec151/: config.h  main.cpp
extension/src/boards/: CMakeLists.txt  board.h  rcc-board.h  spi-board.h
extension/src/boards/heltec151/: CMakeLists.txt  board.c  rcc-board.c  spi-board.c
extension/src/boards/heltec151/cmsis/: stm32l151ccux_flash.ld
extension/src/ldl/: CMakeLists.txt
