project(ldl-library)

set(LDL_DIRECTORY "../../..")

list(APPEND ${PROJECT_NAME}_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_aes.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_cmac.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_ctr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_frame.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_mac_commands.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_mac.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_ops.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_radio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_region.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_stream.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sx126x.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sx127x.c"
)

add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}_SOURCES})

target_include_directories( ${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/include
)

if(MBED_RADIO_SHIELD STREQUAL sx1261)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_SX1261)
elseif(MBED_RADIO_SHIELD STREQUAL sx1262)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_SX1262)
elseif(MBED_RADIO_SHIELD STREQUAL sx1272)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_SX1272)
elseif(MBED_RADIO_SHIELD STREQUAL sx1276)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_SX1276)
elseif(MBED_RADIO_SHIELD STREQUAL wl55)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_WL55)
endif()

if(REGION STREQUAL REGION_EU433)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_EU_433)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_EU_863_870)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_US_902_928)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PRIVATE -DLDL_ENABLE_AU_915_928)
endif()

target_compile_definitions(${PROJECT_NAME}
    PRIVATE -DDUMMY_DEFINE
    # PRIVATE -DLDL_ENABLE_L2_1_0_3
    # PRIVATE -DLDL_ENABLE_L2_1_0_4
    # PRIVATE -DLDL_ENABLE_L2_1_0_4
    # PRIVATE -DLDL_ENABLE_L2_1_1
    # PRIVATE -DLDL_LITTLE_ENDIAN
    # PRIVATE -DLDL_ENABLE_RADIO_DEBUG
    # PRIVATE -DLDL_ENABLE_CLASS_B
    # PRIVATE -DLDL_PARAM_TPS
    # PRIVATE -DLDL_PARAM_A
    # PRIVATE -DLDL_PARAM_B
    # PRIVATE -DLDL_PARAM_ADVANCE
    # PRIVATE -DLDL_DISABLE_SF12
    # PRIVATE -DLDL_DISABLE_TX_PARAM_SETUP
    # PRIVATE -DLDL_ENABLE_OTAA_DITHER
    # PRIVATE -DLDL_ENABLE_ABP
    # PRIVATE -DLDL_ENABLE_TEST_MODE
    # PRIVATE -DLDL_DISABLE_DEVICE_TIME
    # PRIVATE -DLDL_ENABLE_STATIC_RX_BUFFER
    # PRIVATE -DLDL_DISABLE_LINK_CHECK
    # PRIVATE -DLDL_TRACE_DISABLED
    # PRIVATE -DLDL_ENABLE_ERRATA_A1
)
