project(ldl-library)

set(LDL_DIRECTORY "../../..")

list(APPEND ${PROJECT_NAME}_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_aes.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_cmac.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_ctr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_frame.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_mac_commands.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_mac.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_ops.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_radio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_region.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_stream.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sx126x.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/src/ldl_sx127x.c"
)

add_library(${PROJECT_NAME} OBJECT EXCLUDE_FROM_ALL ${${PROJECT_NAME}_SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/${LDL_DIRECTORY}/include
)

if(MBED_RADIO_SHIELD STREQUAL sx1261)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_SX1261)
elseif(MBED_RADIO_SHIELD STREQUAL sx1262)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_SX1262)
elseif(MBED_RADIO_SHIELD STREQUAL sx1272)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_SX1272)
elseif(MBED_RADIO_SHIELD STREQUAL sx1276)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_SX1276)
elseif(MBED_RADIO_SHIELD STREQUAL wl55)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_WL55)
endif()

if(REGION STREQUAL REGION_EU433)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_EU_433)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_EU_863_870)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_US_902_928)
elseif(REGION STREQUAL REGION_EU868)
    target_compile_definitions(${PROJECT_NAME} PUBLIC LDL_ENABLE_AU_915_928)
endif()

target_compile_definitions(${PROJECT_NAME}
    PRIVATE -DDUMMY_DEFINE
    # PUBLIC LDL_ENABLE_L2_1_0_3
    # PUBLIC LDL_ENABLE_L2_1_0_4
    # PUBLIC LDL_ENABLE_L2_1_0_4
    # PUBLIC LDL_ENABLE_L2_1_1
    # PUBLIC LDL_LITTLE_ENDIAN
    # PUBLIC LDL_ENABLE_RADIO_DEBUG
    # PUBLIC LDL_ENABLE_CLASS_B
    # PUBLIC LDL_PARAM_TPS
    # PUBLIC LDL_PARAM_A
    # PUBLIC LDL_PARAM_B
    # PUBLIC LDL_PARAM_ADVANCE
    # PUBLIC LDL_DISABLE_SF12
    # PUBLIC LDL_DISABLE_TX_PARAM_SETUP
    # PUBLIC LDL_ENABLE_OTAA_DITHER
    # PUBLIC LDL_ENABLE_ABP
    # PUBLIC LDL_ENABLE_TEST_MODE
    # PUBLIC LDL_DISABLE_DEVICE_TIME
    # PUBLIC LDL_ENABLE_STATIC_RX_BUFFER
    # PUBLIC LDL_DISABLE_LINK_CHECK
    # PUBLIC LDL_TRACE_DISABLED
    # PUBLIC LDL_ENABLE_ERRATA_A1
)
